spade-tests/src/snapshots/spade_tests__typeinference__reading_from_port_members_is_a_type_error.snap
---
source: spade-tests/src/typeinference.rs
---
use std::ports::read_mut_wire;

struct A {
    x: bool,
    y: int<3>
}

fn takes_normal(x: bool, y: int<3>) -> bool __builtin__

entity uut(val: &mut A) -> bool {
    let x = inst read_mut_wire(val.x);
    let y = inst read_mut_wire(val.y);
    takes_normal(x, y)
}


error: Field access on &mut A which is not a struct
   ┌─ testinput:11:32
   │
11 │     let x = inst read_mut_wire(val.x);
   │                                ^^^^^ Expected struct, found &mut A


